cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: req-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "frontend.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: "api.frontend.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: req-back
                port:
                  number: 8000
